--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build": "webpack --watch",
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "bootstrap": "^4.3.1",
@@ -21,6 +23,8 @@
     "react-dom": "15.6.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "webpack": "3.1.0"
+    "webpack": "3.1.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   }
 }
